--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
   ],
   "dependencies": {
     "lodash.isequal": "^4.5.0",
-    "mathlive": ">=0.64.0"
+    "mathlive": "0.72.3"
   },
   "bugs": {
     "url": "https://github.com/ShaMan123/react-math-view/issues"
